--- a/client/views/partials/dashboard/amountByPartyId.html
+++ b/client/views/partials/dashboard/amountByPartyId.html
@@ -30,6 +30,12 @@
         <tr ng-if="!results || results.length === 0">
             <td colspan="8">No Records exist.</td>
         </tr>
+        <tr class="text-center">
+            <td colspan="3"><b>Total</b></td>
+            <td><b>{{amountPaid.totalFreight}}</b></td>
+            <td><b>{{amountPaid.totalPaid}}</b></td>
+
+        </tr>
     </table>
 </div>
 </div>
