--- a/client/views/partials/dashboard/revenueByvehicleId.html
+++ b/client/views/partials/dashboard/revenueByvehicleId.html
@@ -26,6 +26,11 @@
         <tr ng-if="!revenueByVehicleId || revenueByVehicleId.length === 0">
             <td colspan="8">No Records exist.</td>
         </tr>
+        <tr class="text-center">
+            <td colspan="3"><b>Total</b></td>
+            <td><b>{{totalRevenueByVehicleId.totalFreight}}</b></td>
+            <td><b>{{totalRevenueByVehicleId.totalExpenses}}</b></td>
+        </tr>
     </table>
 </div>
 
