--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -1,6 +1,6 @@
 
 
-        <div class="main-right col-sm-9 col-xs-12" ng-controller="AddEditTruckCtrl">
+        <div class="main-right col-xs-12" ng-controller="AddEditTruckCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
                 <div class="col-sm-6 col-xs-12 mt-10">
