--- a/client/views/index.html
+++ b/client/views/index.html
@@ -21,12 +21,14 @@
 <body ng-app="EasyGaadi">
 
 <left-nav-li name="Accounts" link="drivers"></left-nav-li>
-<span  ng-controller="NavCtrl">
+<span ng-controller="NavCtrl">
 
-<nav class="navbar navbar-default menu-header">
-    <div class="container" >
+<nav class="navbar navbar-default menu-header" ng-if="isLoggedIn()">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 top-nav">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header col-sm-2">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -36,50 +38,68 @@
             </button>
             <a class="navbar-brand logo" href="#" ui-sref="dashboard"><img src="images/logo.png"></a>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">How it Works</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">GPS</a></li>
-
-                <li ng-show="isLoggedInn" >
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{displayName}}<span
-                            class="caret"></span></a>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse col-sm-10" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav col-sm-9">
+                <li ng-class="{selected: activeTab === 'dashboard'}"> <a href="#" ui-sref="dashboard">
+                    <img src="images/erp.png"><span>ERP</span></a></li>
+                <li ng-class="{selected: activeTab === 'drivers'}"><a href="#" ui-sref="drivers">
+                    <img src="images/gps.png"><span>GPS</span></a></li>
+                <li ng-class="{selected: activeTab === 'trucks'}"><a href="#" ui-sref="trucks">
+                    <img src="images/fuelcard.png"><span>Fuel Card</span></a></li>
+                <li><a href="#">  <img src="images/tollcard.png"><span>Toll Card</span></a></li>
+                <li><a href="#">  <img src="images/load.png"><span>Loads</span></a></li>
+                <li><a href="#">  <img src="images/settings.png"><span>Settings</span></a></li>
+                <li><a href="#">  <img src="images/notifications.png"><span>Notifications</span></a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right col-sm-3 margin-top-10" ng-show="isLoggedin">
+                <li class="col-sm-3 pall-zero"><img src="images/user.png"></li>
+                <li class="col-sm-9 pall-zero" >
+                    <a href="#" class="dropdown-toggle pt-18" data-toggle="dropdown">{{displayName}}
+                        <span class="caret"></span></a>
                     <ul class="dropdown-menu" >
                         <li><a href="#"></a></li>
-                        <li><a href="#" ng-click="logout()">Logout</a></li>
+                        <li><a href="#">My Profile</a></li>
+                         <li><a href="#">My Groups</a></li>
+                         <li><a href="#">Add Group</a></li>
+                         <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-<top-navigation ng-if="isLoggedIn()"></top-navigation>
-<div class="container-fluid">
-    <div class="row pall-zero">
-        <div class="col-sm-2 col-xs-12 pall-zero mt-5"  ng-if="isLoggedIn()" ng-controller="LeftNavCtrl">
-            <left-menu label="Dashboard"></left-menu>
-            <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>
-            <left-menu label="Drivers"></left-menu>
-            <left-menu label="Trucks"></left-menu>
-            <left-menu label="Trips"></left-menu>
-            <left-menu label="Party"></left-menu>
-            <left-menu label="Expense-Master" ></left-menu>
-            <left-menu label="Expenses"></left-menu>
-            <left-menu label="Payments"></left-menu>
+             </div><!-- /.container-fluid -->
         </div>
+        </div>
+</nav>
+    <div class="clearfix"></div>
+    <!--<top-navigation ng-if="isLoggedIn()"></top-navigation>-->
+    <div class="body-section">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+        <div class="col-sm-2 col-xs-12 left-nav" ng-if="isLoggedIn()" ng-controller="LeftNavCtrl">
+            <left-menu label="Reports"></left-menu>
+            <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>
+            <left-menu label="Trucks"></left-menu>
+            <left-menu label="Drivers"></left-menu>
+            <left-menu label="Parties"></left-menu>
+            <left-menu label="Payments"></left-menu>
+            <left-menu label="Trips"></left-menu>
+            <!--<left-menu label="Expense-Master"></left-menu>-->
+            <left-menu label="Expenses"></left-menu>
 
-        <div>
+        </div>
+        <div class="col-sm-10 col-xs-12">
             <ui-view></ui-view>
         </div>
     </div>
+        </div>
 </div>
+    </div>
 
 </span>
+
 <!--bower scripts-->
 <script src="components/jquery/dist/jquery.min.js"></script>
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -90,9 +110,7 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-<script type="text/javascript"
-        src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
-
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
 
 <!--app-->
 <script src="js/app.js"></script>
@@ -120,7 +138,7 @@
 <script src="js/modules/paymentsModule.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
 <script src="js/modules/expenseMasterModule.js"></script>
-<script src="/js/modules/pendingBalanceModule.js"></script>
+<script src="js/modules/pendingBalanceModule.js"></script>
 <script src="js/modules/trackMapModule.js"></script>
 <script src="js/modules/groupMap.js"></script>
 <script src="js/modules/dashBoardModule.js"></script>
