--- a/client/views/partials/ExpenseMaster/expense-master.html
+++ b/client/views/partials/ExpenseMaster/expense-master.html
@@ -1,10 +1,28 @@
 
-        <div class="main-right col-xs-9" ng-controller="ExpenseMasterCrtl">
+        <div class="main-right col-xs-12" ng-controller="ExpenseMasterCrtl">
 
-            <h3>Expense Master</h3>
-            <div class="toolbar-button-div pull-right">
-                <button class="btn  btn-blue pull-right mb-10" ng-click="goToEditExpenseTypePage()">Add Expense Type</button>
+            <div class="col-xs-12 pall-zero mb-10">
+                <div class="col-sm-3 pall-zero"><h3>Expense Master</h3></div>
+                <div class="col-sm-6">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon">
+                        <button type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                    </div>
+                </div>
+                <div class="col-sm-3 pall-zero">
+                    <select class="form-control">
+                        <option value="" selected>All Vehicles</option>
+                        <option ng-repeat="parties in currentPageOfParties">{{trips.attrs.truckName}}</option>
+                    </select>
+                </div>
             </div>
+         <!--   <div class="toolbar-button-div pull-right">
+                <button class="btn  btn-blue pull-right mb-10" ng-click="goToEditExpenseTypePage()">Add Expense Type</button>
+            </div>-->
 
 
             <table class="table table-bordered table-striped table-condensed table-hover text-center" ng-table="expenseMasterParams" >
