--- a/client/views/partials/dashboard/dashboard.html
+++ b/client/views/partials/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 
-        <div class="main-right col-xs-9" ng-controller="dashboardController" ng-init="loggedInName();">
+        <div class="main-right col-xs-12" ng-controller="dashboardController" ng-init="loggedInName();">
             <div class="col-xs-12">
                 <div class="col-xs-6">
                 <h3 class="login-heading mt-5">Expired</h3>
@@ -66,7 +66,7 @@
 
                 </div>
                     <div class="col-xs-6">
-                    <h3 class="login-heading">Total Payment Receivable</h3>
+                    <h3 class="login-heading">Payment Receivable</h3>
                     <div class="col-xs-12 mt-10">
                         <label class="col-sm-6"><a ui-sref="amountByParties">From All Parties</a></label>
                         <div class="col-sm-6"><a ui-sref="amountByParties">
