--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -1,6 +1,24 @@
 
-        <div class="main-right col-xs-9" ng-controller="ExpenseCtrl">
-            <h3>Expenses</h3>
+        <div class="main-right col-xs-12" ng-controller="ExpenseCtrl">
+            <div class="col-xs-12 pall-zero mb-10">
+                <div class="col-sm-3 pall-zero"><h3>Expenses</h3></div>
+                <div class="col-sm-6">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon">
+                        <button type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                    </div>
+                </div>
+                <div class="col-sm-3 pall-zero">
+                    <select class="form-control">
+                        <option value="" selected>All Vehicle</option>
+                        <option ng-repeat="maintanence in currentPageOfMaintanence ">{{maintanence.attrs.truckName}}</option>
+                    </select>
+                </div>
+            </div>
             <div class="toolbar-button-div pull-right mb-10">
                 <button class="btn  btn-blue pull-right" ng-click="goToEditExpensePage()">Add Expenses</button>
             </div>
