--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -1,7 +1,27 @@
 
-        <div class="main-right col-xs-9"  ng-controller="PartyListController">
-            <h3>Party</h3>
-            <button class="btn btn-blue pull-right mb-10" ng-click="goToEditPartyPage()">Add Party</button>
+        <div class="main-right col-xs-12"  ng-controller="PartyListController">
+            <div class="col-xs-12 pall-zero mb-10">
+                <div class="col-sm-3 pall-zero"><h3>Parties</h3></div>
+                <div class="col-sm-6">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon">
+                        <button type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                    </div>
+                </div>
+                <div class="col-sm-3 pall-zero">
+                    <select class="form-control">
+                        <option value="" selected>All Vehicles</option>
+                        <option ng-repeat="parties in currentPageOfParties">{{trips.attrs.truckName}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <!--<button class="btn btn-blue pull-right mb-10" ng-click="goToEditPartyPage()">Add Party</button>-->
+
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                 <tr ng-repeat="parties in currentPageOfParties" style="text-align: center;">
 
