--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -1,8 +1,26 @@
 
-        <div class="main-right col-xs-9" ng-controller="TrucksController">
+        <div class="main-right col-xs-12" ng-controller="TrucksController">
 
-            <h3>Trucks</h3>
-            <button class="btn btn-blue pull-right mb-10" ng-click="goToEditTruckPage()">Add Truck</button>
+            <div class="col-xs-12 pall-zero mb-10">
+                <div class="col-sm-3 pall-zero"><h3>Trucks</h3></div>
+                <div class="col-sm-6">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon">
+                        <button type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                    </div>
+                </div>
+                <div class="col-sm-3 pall-zero">
+                    <select class="form-control">
+                        <option value="" selected>All Vehicles</option>
+                        <option ng-repeat="trucks in currentPageOfTrucks">{{trucks.registrationNo}}</option>
+                    </select>
+                </div>
+            </div>
+           <button class="btn btn-blue pull-right mb-10" ng-click="goToEditTruckPage()">Add Truck</button>
 
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="truckParams">
                 <tr ng-repeat="trucks in currentPageOfTrucks" style="text-align: center;">
