--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -5,9 +5,9 @@
             <div class="col-xs-12 pall-zero mt-10">
                 <div class="col-xs-8 pall-zero">
                     <div class="input-group stylish-input-group col-xs-6">
-                        <input type="text" class="form-control"  placeholder="Search" >
+                        <input type="text" class="form-control"  placeholder="Search" ng-model="filter" ng-click="findAccounts()" >
                         <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="submit" ng-click="findAccounts()">
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
                     </span>
