--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,36 +1,59 @@
 
 
+/*Common CSS*/
+.pall-zero {
+    padding: 0 !important;
+}
+.mb-10 {
+    margin-bottom: 10px;
+}
+.mt-5 {
+    margin-top: 5px;
+}
+.pt-18 {
+    padding-top: 18px !important;
+}
+.mt-30 {
+    margin-top: 30px;
+}
+.margin-top-40 {
+    margin-top: 40px;
+}
+.margin-top-10 {
+    margin-top: 10px;
+}
+.ml-10 {
+    margin-left: 10px;
+}
 @font-face {
     font-family: 'Gotham-Medium';
-    src:
-            url('../fonts/Gotham-Medium/Gotham-Medium.eot?#iefix') format('embedded-opentype'),
-            url('../fonts/Gotham-Medium/Gotham-Medium.otf')  format('opentype'),
-            url('../fonts/Gotham-Medium/Gotham-Medium.woff') format('woff'),
-            url('../fonts/Gotham-Medium/Gotham-Medium.ttf')  format('truetype'),
-            url('../fonts/Gotham-Medium/Gotham-Medium.svg#Gotham-Medium') format('svg');
+    src: url('../fonts/Gotham-Medium/Gotham-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Gotham-Medium/Gotham-Medium.otf') format('opentype'),
+    url('../fonts/Gotham-Medium/Gotham-Medium.woff') format('woff'),
+    url('../fonts/Gotham-Medium/Gotham-Medium.ttf') format('truetype'),
+    url('../fonts/Gotham-Medium/Gotham-Medium.svg#Gotham-Medium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'Gotham-Book';
-    src:
-            url('../fonts/Gotham-Book/Gotham-Book.eot?#iefix') format('embedded-opentype'),
-            url('../fonts/Gotham-Book/Gotham-Book.otf')  format('opentype'),
-            url('../fonts/Gotham-Book/Gotham-Book.woff') format('woff'),
-            url('../fonts/Gotham-Book/Gotham-Book.ttf')  format('truetype'),
-            url('../fonts/Gotham-Book/Gotham-Book.svg#Gotham-Book') format('svg');
+    src: url('../fonts/Gotham-Book/Gotham-Book.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Gotham-Book/Gotham-Book.otf') format('opentype'),
+    url('../fonts/Gotham-Book/Gotham-Book.woff') format('woff'),
+    url('../fonts/Gotham-Book/Gotham-Book.ttf') format('truetype'),
+    url('../fonts/Gotham-Book/Gotham-Book.svg#Gotham-Book') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Gotham-Light';
-    src:
-            url('../fonts/Gotham-Light/Gotham-Light.eot?#iefix') format('embedded-opentype'),
-            url('../fonts/Gotham-Light/Gotham-Light.otf')  format('opentype'),
-            url('../fonts/Gotham-Light/Gotham-Light.woff') format('woff'),
-            url('../fonts/Gotham-Light/Gotham-Light.ttf')  format('truetype'),
-            url('../fonts/Gotham-Light/Gotham-Light.svg#Gotham-Light') format('svg');
+    src: url('../fonts/Gotham-Light/Gotham-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Gotham-Light/Gotham-Light.otf') format('opentype'),
+    url('../fonts/Gotham-Light/Gotham-Light.woff') format('woff'),
+    url('../fonts/Gotham-Light/Gotham-Light.ttf') format('truetype'),
+    url('../fonts/Gotham-Light/Gotham-Light.svg#Gotham-Light') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -38,25 +61,26 @@
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
-body{
+
+body {
     font-family: Gotham-Light;
     font-size: 14px;
     background-color: #f5f5f5;
     color: #838993;
 }
-.pall-zero {
-    padding: 0 !important;
+.btn-custom {
+    border-radius: 0px !important;
 }
-.btn-custom{
-    border-radius: 0px!important;
-}
-.top-nav{
+
+.top-nav {
     margin: 30px 0;
 }
-.top-nav .navbar-collapse{
+
+.top-nav .navbar-collapse {
     width: 83.33333%;
 }
-.btn-custom[disabled]{
+
+.btn-custom[disabled] {
     cursor: auto;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -85,20 +109,67 @@ body{
     color: #fff;
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
 }
-.menu-header .navbar-nav > li > a >img {
+
+.menu-header .navbar-nav > li > a > img {
     display: block;
     margin: 0 auto;
     padding-bottom: 10px;
 }
-
+.login-page{
+    background: url("../images/Login_BG.jpg") no-repeat center;
+    background-size: cover;
+    height: 683px;
+}
+.logo-login{
+    margin-bottom: 30px;
+}
 .login-form {
     max-width: 480px;
-    padding: 15px 35px 45px;
+    padding: 30px;
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    position: absolute;
+    right: 8%;
+    bottom: 15%;
+    border-radius: 5px;
 }
-
+.custom-form-control{
+    border: 0 !important;
+    border-bottom: 1px solid #ccc !important;
+    box-shadow: none;
+    border-radius: 0;
+    padding: 6px 0 !important;
+    height: 45px;
+}
+.custom-form-control:focus{
+    border-color:transparent !important;
+    border-bottom-color: #d9534f !important;
+    -webkit-box-shadow:none !important;
+    box-shadow: none !important;
+}
+.remember{
+    float: left;
+    font-size: 15px;
+}
+.forgot{
+    float: right;
+}
+.forgot a{
+    color: #000;
+}
+.sign-in{
+    margin-top: 25px;
+}
+.sign-in-btn{
+    background-color: #E83B13;
+    border-color: #E83B13;
+    color: #fff;
+    border-radius: 0;
+    float: right;
+    width: 30%;
+    height: 40px;
+}
 .left-menu {
     text-align: left;
 }
@@ -107,7 +178,8 @@ body{
     margin-bottom: 10px;
     font-size: 18px;
 }
-.left-menu-li:hover{
+
+.left-menu-li:hover {
     color: #000;
 }
 
@@ -118,8 +190,8 @@ body{
     text-decoration: none;
     font-size: 15px;
     display: block;
-    width:100%;
-    padding:8px 15px;
+    width: 100%;
+    padding: 8px 15px;
 
 }
 
@@ -128,10 +200,12 @@ body{
     color: #000;
 
 }
-.body-nav{
+
+.body-nav {
     margin-top: 15px;
 }
-.body-nav ul li{
+
+.body-nav ul li {
     border: 1px solid #CCC;
     width: 11%;
     padding: 7px;
@@ -139,7 +213,8 @@ body{
     background-color: #F5F5F5;
     cursor: pointer;
 }
-.body-nav ul li:hover{
+
+.body-nav ul li:hover {
     border: 1px solid #CCC;
     width: 11%;
     padding: 7px;
@@ -147,33 +222,35 @@ body{
     background-color: #ccc;
     cursor: pointer;
 }
-.body-nav ul li a{
+
+.body-nav ul li a {
     text-decoration: none;
-}
-.mb-10 {
-    margin-bottom: 10px;
 }
 
 .cursor-pointer {
     cursor: pointer;
 }
-.edit{
+
+.edit {
     text-decoration: none;
     padding-right: 10px;
     font-size: 18px;
     cursor: pointer;
 }
-.edit:hover{
+
+.edit:hover {
     text-decoration: none;
     color: #d9534f;
 }
-.dele{
+
+.dele {
     text-decoration: none;
     padding-right: 10px;
     font-size: 18px;
     cursor: pointer;
 }
-.dele:hover{
+
+.dele:hover {
     text-decoration: none;
     color: #d9534f;
 }
@@ -182,166 +259,291 @@ body{
     background-color: #fff;
     border-radius: 5px;
 }
-.main-right h3{
+.main-temp {
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-top: 15px;
+}
+
+.main-right h3 {
     padding: 8px;
 }
-.btn-blue{
+
+.btn-blue {
     background-color: rgba(25, 149, 199, .6);
     border-radius: 0;
     color: #fff;
     border: 1px solid rgba(25, 149, 199, .6);
 }
-.btn-blue:hover{
+
+.btn-blue:hover {
     background-color: #d9534f;
-    border:1px solid #d9534f;
+    border: 1px solid #d9534f;
     color: #fff;
 }
-.btn-blue:active, .btn-blue:focus{
+
+.btn-blue:active, .btn-blue:focus {
     background-color: #d9534f;
-    border:1px solid #d9534f;
+    border: 1px solid #d9534f;
 }
+
+/*
 .active {
 
     color: #fff !important;
     text-decoration: none;
 }
-.left-menu .active a{
+*/
+
+.left-menu li a:active   {
     background-color: #EDF0F5 !important;
     text-decoration: none;
     border-radius: 5px;
 }
-.selected{
+
+.selected {
     border-bottom: 2px solid #dcd6d6;
     color: #fff !important;
     text-decoration: none;
 }
-.selected a{
+
+.selected a {
     color: #fff;
 }
-.mt-5{
-    margin-top: 5px;
-}
-.pt-18{
-    padding-top: 18px !important;
-}
-.custom-dropdown-dynamic>ul{
-    min-width: 190px!important;
-    border-radius: 0!important;
+
+.custom-dropdown-dynamic > ul {
+    min-width: 190px !important;
+    border-radius: 0 !important;
 }
 
-.custom-dropdown-dynamic .dropdown-menu>.active>a, .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover {
+.custom-dropdown-dynamic .dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover {
     color: #000;
     text-decoration: none;
     background-color: #337ab7;
     outline: 0;
-}
-
-.mt-10{
-    margin-top: 30px;
-}
-.margin-top-40 {
-    margin-top: 40px;
-}
-.margin-top-10{
-    margin-top: 10px;
 }
 .account-edit {
     display: block;
     margin: 0 auto;
     float: none;
 }
-.main-right .form-control{
+
+.main-right .form-control {
     border-radius: 0px;
     height: 42px;
 }
-.btn-red{
-    background-color:#d9534f;
+
+.btn-red {
+    background-color: #d9534f;
     color: #fff;
 }
-.btn-primary{
-    color: #fff;
-    background-color: rgba(25, 149, 199, .6);
-    border-color: rgba(25, 149, 199, .6);
-}
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+
+/*.btn-primary {*/
+    /*color: #fff;*/
+    /*background-color: rgba(25, 149, 199, .6);*/
+    /*border-color: rgba(25, 149, 199, .6);*/
+/*}*/
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
     background-color: transparent;
     color: #d9534f;
 }
-.payment-grid{
-    height:200px;
+
+.payment-grid {
+    height: 200px;
 }
-.acc .glyphicon-chevron-right, .acc .glyphicon-chevron-down{
+
+.acc .glyphicon-chevron-right, .acc .glyphicon-chevron-down {
     top: -17px;
     font-size: 14px;
 }
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
-    padding:0px !important;
+.table > tbody > tr{
+    border-bottom: 1px solid #ccc;
+}
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+    padding: 0px 5px !important;
     vertical-align: middle;
+    text-align: left;
 }
-.ng-table th.sortable{
+/*.table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th{*/
+/*border: none !important;*/
+/*}*/
+
+.ng-table th.sortable {
     padding: 6px !important;
+    font-weight: bold;
+    font-size: 13px;
+    color: #000;
+    text-align: left;
 }
-.red{
+
+.red {
     color: red;
 }
+
 .drop-check .dropdown-toggle {
-    width:200px;
+    width: 200px;
 }
 
-.ui-notification{
+.ui-notification {
     position: fixed;
-    right:0;
+    right: 0;
+}
 
-}
-.ml-10{
-    margin-left: 10px;
-}
-.pl4-pr0{
+.pl4-pr0 {
     padding-left: 4px;
     padding-right: 0;
 }
-.add-trip-lane{
+
+.add-trip-lane {
     position: absolute;
     top: 0;
-    right:12px;
+    right: 12px;
 }
-.fa-minus-circle{
-    color: red!important;
+
+.fa-minus-circle {
+    color: red !important;
 }
-.stylish-input-group .input-group-addon{
+
+.stylish-input-group .input-group-addon {
     background: #000 !important;
     padding: 0 6px !important;
 }
-.stylish-input-group .glyphicon-search{
+
+.stylish-input-group .glyphicon-search {
     font-size: 25px;
     color: #fff;
 }
-.stylish-input-group .form-control{
-    border-right:0;
-    box-shadow:0 0 0;
-    border-color:#ccc;
-    height:42px;
+
+.stylish-input-group .form-control {
+    border-right: 0;
+    box-shadow: 0 0 0;
+    border-color: #ccc;
+    height: 42px;
 }
-.stylish-input-group button{
-    border:0;
-    background:transparent;
+
+.stylish-input-group button {
+    border: 0;
+    background: transparent;
 }
-.body-section{
+
+.body-section {
     margin-top: -30px;
 }
-.left-nav{
+
+.left-nav {
     background-color: #fff;
     border-radius: 5px;
-    padding:0;
+    padding: 0;
     border: 0;
 }
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     background-color: transparent;
     color: #fff;
 }
-.input-group-btn .btn{
-    height:42px;
+
+/*.input-group-btn .btn {
+    height: 42px;
+}*/
+
+.menu-header .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+    color: #fff;
 }
-.menu-header .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
-    color:#fff;
+
+/*Reports page Css Starts Here*/
+.reports-panel {
+    display: table;
+    background-color: #fff;
+    padding: 15px 10px;
+    width: 222px;
+    height: 140px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.reports-image{
+    display: table-cell;
+    vertical-align: top;
+    float: left;
+}
+.reports-text{
+    display: table-cell;
+    width: 100%;
+    text-align: left;
+    vertical-align: top;
+}
+.reports-text h3{
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+    padding-bottom: 8px;
+}
+.reports-text small{
+    font-size: 16px;
+    color: #1E4495;
+    font-weight: bold;
+}
+.payble{
+    /*border: 1px solid #ccc;*/
+}
+.reports-panel ul{
+    padding: 0;
+    width: 100%;
+    top: 15px;
+    display: block;
+    margin: 0 auto;
+}
+.paymets ul li{
+    /*width: 48%;*/
+    width: 75%;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+.reports-panel ul li small{
+    font-size: 12px;
+    padding-left: 5px;
+}
+.reports-panel a, a:focus, a:hover{
+    font-weight: bold;
+    text-decoration: none;
+    color: #1E4495;
+    font-size: 14px;
+}
+.activated{
+    background-color: #000;
+    color: #fff;
+}
+.h3activated{
+    color: #fff !important;
+}
+.costactivated{
+    color: #fff !important;
+}
+.action-btn{
+    padding: 6px !important;
+}
+.fromDate .input-group .span .btn{
+    height: 32px;
+}
+.profile-page{
+    padding: 30px;
+    margin-top: -30px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+.profile-tabs{
+    display: block;
+    margin: 0 auto;
+    float: none;
+}
+.profile-tabs li{
+    border: 1px solid #ccc;
+    padding: 10px 25px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.form-group-custom{
+    margin-bottom: 25px;
 }
