--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -26,7 +26,7 @@
                 <button class="btn btn-blue pull-right mb-10" ng-click="goToEditDriverPage()">Add Driver</button>
             </div>
             <div class="mt-10">
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="driverParams">
+            <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="driverParams">
                 <tr ng-repeat="drivers in currentPageOfDrivers" style="text-align: center;">
                     <td data-title="'Driver ID'" sortable="'driverId'" class="clickable-item col-sm-1">
                         {{drivers.driverId}}
