--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -1,46 +1,62 @@
-<div ng-controller="LoginCtrl" class="clo-xs-4 col-xs-push-4">
-    <form class="login-form mt-10" ng-submit="logIn()">
-        <h2 class="login-heading">Login</h2>
-        <div class="mt-10">
-            <div class="form-group col-xs-12">
-                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">Username</label>
-                <div class="col-sm-8 col-xs-12">
-                    <input ng-model="loginParams.userName" type="text" class="form-control" id="userName"
-                           placeholder="User Name">
+<div class="login-page">
+    <div class="clearfix"></div>
+    <div ng-controller="LoginCtrl" class="clo-xs-8 col-xs-push-2">
+        <form class="login-form mt-10" ng-submit="logIn()">
+            <div class="logo-login">
+                <figure>
+                    <img src="images/logo-login.png" class="img-responsive"/>
+                </figure>
+            </div>
+            <div class="mt-10">
+                <div class="form-group col-xs-12">
+                    <!--<label for="userName" class="col-xs-12">Username</label>-->
+                    <div class="col-xs-12">
+                        <input ng-model="loginParams.userName" type="text" class="form-control custom-form-control"
+                               id="userName"
+                               placeholder="User Name">
+                    </div>
+                </div>
+
+                <div class="form-group col-xs-12">
+                    <!--<label for="password" class="col-xs-12">Password</label>-->
+                    <div class="col-xs-12">
+                        <input ng-model="loginParams.password" type="password" class="form-control custom-form-control"
+                               id="password" placeholder="Password">
+                    </div>
+                </div>
+
+                <div class="form-group col-xs-12">
+                    <!--<label for="userName" class="col-xs-12">Mobile</label>-->
+                    <div class="col-xs-12">
+                        <input ng-model="loginParams.contactPhone" type="text" class="form-control custom-form-control"
+                               id="contactPhone" placeholder="Mobile">
+                    </div>
                 </div>
             </div>
 
-            <div class="form-group col-xs-12">
-                <label for="password" class="col-sm-4 col-xs-12 pall-zero">Password</label>
-                <div class="col-sm-8 col-xs-12">
-                    <input ng-model="loginParams.password" type="password" class="form-control" id="password"
-                           placeholder="Password">
+
+            <div class="col-xs-10 col-xs-push-1">
+                <div class="alert alert-danger" role="alert" ng-show="loginParams.errors.length">
+                    <ul>
+                        <li ng-repeat="error in loginParams.errors">{{error}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="col-xs-12">
+                    <div class="remember">
+                        <label><input type="checkbox" name="remember"> Remember Me</label>
+                    </div>
+                    <div class="forgot">
+                        <a href="#" ui-sref="forgotPassword">Forgot Password</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 sign-in">
+                    <button type="submit" class="sign-in-btn btn-primary btn" ng-click="login()">Submit</button>
                 </div>
             </div>
 
-            <div class="form-group col-xs-12">
-                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">Mobile</label>
-                <div class="col-sm-8 col-xs-12">
-                    <input ng-model="loginParams.contactPhone" type="text" class="form-control" id="contactPhone"
-                           placeholder="Mobile">
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-
-        <div class="col-xs-10 col-xs-push-1">
-            <div class="alert alert-danger" role="alert" ng-show="loginParams.errors.length">
-                <ul>
-                    <li ng-repeat="error in loginParams.errors">{{error}}</li>
-                </ul>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-        <div class="col-xs-4 col-xs-push-4">
-            <button type="submit" class="btn btn-primary" ng-click="login()">Submit</button>
-        </div>
-
-        <div class="clearfix"></div>
-    </form>
+        </form>
+    </div>
 
 </div>
