--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -21,7 +21,6 @@
             </div>
         </div>
     </div>
-
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
         <tr ng-repeat="maintanence in currentPageOfMaintanence" style="text-align: center;">
             <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-1">{{ maintanence.date |
@@ -40,13 +39,15 @@
             <td data-title="'Amount'" sortable="'cost'" class="clickable-item col-sm-1">{{
                 maintanence.cost }}
             </td>
+            <td data-title="'Mode'" sortable="'mode'" class="clickable-item col-sm-1">{{
+                maintanence.mode }}
+            </td>
             <td data-title="'Created By'" sortable="'createdByName'"
                 class="clickable-item col-sm-2">{{ maintanence.attrs.createdByName }}
             </td>
             <td data-title="'Action'" class="col-sm-2">
                 <a href="#" class="btn" ng-click="goToEditExpensePage(maintanence._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-
                 <a href="#" class="btn" ng-click="deleteExpenseRecord(maintanence._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
