Completed JIRA Issues and Updated Some APIs

--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -23,6 +23,9 @@
                     <td data-title="'Amount'" sortable="'cost'" class="clickable-item col-sm-1">{{
                         maintanence.cost }}
                     </td>
+                    <td data-title="'Mode'" sortable="'mode'" class="clickable-item col-sm-1">{{
+                        maintanence.mode }}
+                    </td>
                     <td data-title="'Created By'" sortable="'createdByName'"
                         class="clickable-item col-sm-2">{{ maintanence.attrs.createdByName }}
                     </td>
