--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -75,7 +75,7 @@
                                        class="form-control" typeahead-min-length="1"
                                        typeahead-on-select="selectTripLane($item)"
                                        typeahead-select-on-exact="true" typeahead-no-results="noTlane"
-                                       placeholder="Traip Lane" autocomplete="false">
+                                       placeholder="Trip Lane" autocomplete="false">
 
                                 <div ng-show="noTlane">
                                     <i class="glyphicon glyphicon-remove red"></i>
