--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -62,6 +62,14 @@
                             <div class="col-xs-12 col-sm-8">
                                 <input ng-model="expenseDetails.expenseName" type="text" class="form-control" id="expenseName" placeholder="Other expense type"></div>
                         </div>
+                        <div class="form-group col-xs-12">
+                            <div class="col-xs-12 col-sm-6">
+                                <input ng-model="expenseDetails.mode" type="radio"  id="Credit" value="Credit">Credit
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                                <input ng-model="expenseDetails.mode" type="radio"  id="Cash" value="Cash">Cash
+                            </div>
+                        </div>
                     </div>
 
                     <div class="clearfix"></div>
