--- a/client/views/partials/dashboard/amountByParties.html
+++ b/client/views/partials/dashboard/amountByParties.html
@@ -1,9 +1,49 @@
 
-<div class="main-right col-xs-9" ng-controller="dashboardController">
+<div class="main-right col-xs-9" ng-controller="dashboardController" ng-init="getAllParties();">
     <h3>Pending Payments</h3>
     <div class="toolbar-button-div pull-right mb-10">
         &nbsp;
     </div>
+    <table class="table table-bordered table-striped table-condensed table-hover">
+        <tr style="text-align: center;">
+            <td class="col-sm-2">
+                <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'">
+                </date-picker>
+            </td>
+            <td class="col-sm-2">
+                <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'">
+                </date-picker>
+            </td>
+            <td class="col-sm-2">
+                <input type="text" ng-model="filters.partyName" 
+                       uib-typeahead="party.name for party in partiesList | filter:$viewValue"
+                       class="form-control" typeahead-min-length="1"
+                       typeahead-on-select="selectPartyId($item)"
+                       ng-change="resetPartyName();"
+                       typeahead-select-on-exact="true" placeholder="Party Name"
+                       typeahead-no-results="noParty" autocomplete="false">
+                <div ng-show="noParty">
+                    <i class="glyphicon glyphicon-remove red"></i>
+                    <span class="red"> No Results Found </span>
+                </div>
+            </td>
+            <td class="col-sm-2">
+                <button ng-click="getAmountsBypartyWithFilters()">
+                    Go</button></td>
+            <div>
+                <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
+                    <ul>
+                        <li ng-repeat="error in filters.error">{{error}}</li>
+                    </ul>
+                </div>
+                <div class="alert alert-success" role="alert" ng-show="filters.success.length">
+                    <ul>
+                        <li ng-repeat="success in filters.success">{{success}}</li>
+                    </ul>
+                </div>
+            </div>
+        </tr>
+    </table>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
         <tr ng-repeat="amountByParties in parties" style="text-align: center;">
             <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item col-sm-2">
@@ -14,7 +54,7 @@
             <td data-title="'Party Mobile'" sortable="'partyContact'" class="clickable-item col-sm-2">
                     {{ amountByParties.attrs.partyContact}}
                 </td>
-            <td data-title="'Total Fright'" sortable="'totalFright'" class="clickable-item col-sm-2">
+            <td data-title="'Total Freight'" sortable="'totalFright'" class="clickable-item col-sm-2">
                 {{ amountByParties.totalFright}}
             </td>
             <td data-title="'Paid Amount'" sortable="'totalPayment'" class="clickable-item col-sm-2">
